--- a/css/style.css
+++ b/css/style.css
@@ -8,4 +8,113 @@ body {
   background-color: black;
 }
 
+header .logo {
+  position: absolute;
+}
+header .carrito {
+  position: absolute;
+  margin-left: 1730px;
+  margin-top: 40px;
+  width: 80px;
+}
+header nav {
+  position: sticky;
+  top: 0;
+}
+header nav li {
+  display: inline-block;
+  font-size: 25px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+  margin-left: 190px;
+  margin-top: 50px;
+  position: sticky;
+  top: 0;
+}
+header nav .seccion {
+  text-decoration: none;
+  color: white;
+}
+header nav .seccion:hover {
+  color: #a558ec;
+}
+
+.mainindex div {
+  padding-top: 20px;
+}
+.mainindex div .portada {
+  margin-top: 50px;
+}
+.mainindex div .columnas {
+  color: white;
+  font-size: 25px;
+  padding: 60px;
+  font-weight: bold;
+  flex-direction: column;
+  font-family: "Montserrat", sans-serif;
+}
+.mainindex div .parrafoinicio {
+  color: #a558ec;
+  padding: 5px;
+  font-family: "Montserrat", sans-serif;
+}
+
+.sectionindex .conjunto {
+  color: white;
+  font-weight: bold;
+  text-align: center;
+  padding-bottom: 150px;
+  padding-top: 70px;
+  text-decoration: underline;
+  font-family: "Montserrat", sans-serif;
+}
+.sectionindex .fotoconjunto {
+  border-radius: 15px;
+  margin-left: 150px;
+}
+.sectionindex .fotoconjunto:hover {
+  border: solid #a558ec 2px;
+}
+.sectionindex .dark {
+  color: white;
+  position: absolute;
+  top: 140%;
+  left: 15%;
+  font-family: "Montserrat", sans-serif;
+}
+.sectionindex .precioconjunto {
+  color: #a558ec;
+  margin-left: 310px;
+  padding: 15px;
+}
+.sectionindex .fotoconjunto2 {
+  margin-left: 560px;
+  border-radius: 15px;
+}
+.sectionindex .fotoconjunto2:hover {
+  border: solid #a558ec 2px;
+}
+.sectionindex .light {
+  color: white;
+  position: absolute;
+  top: 140%;
+  left: 70%;
+  font-family: "Montserrat", sans-serif;
+}
+.sectionindex .precioconjunto2 {
+  color: #a558ec;
+  margin-left: 1380px;
+  margin-top: -50px;
+}
+
+footer {
+  color: #706a6a;
+  text-align: center;
+  padding-top: 30px;
+}
+
+.textofooter {
+  font-size: 20px;
+}
+
 /*# sourceMappingURL=style.css.map */
