--- a/css/style.css
+++ b/css/style.css
@@ -117,4 +117,224 @@ footer {
   font-size: 20px;
 }
 
+.productos2 {
+  height: 100vh;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.container {
+  padding: 0.5rem;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.card {
+  margin-top: 70px;
+  border-radius: 8px;
+  padding: 20px;
+  width: 300px;
+  height: 300px;
+  box-shadow: 0 4px 8px;
+  text-align: center;
+  background-color: #db4cdb;
+  border: 1px solid #db4cdb;
+}
+
+.buzo {
+  height: 200px;
+}
+
+.rockstar {
+  color: white;
+  font-family: "Oswald", sans-serif;
+  margin-left: 80px;
+  margin-top: 20px;
+  position: absolute;
+}
+
+.preciorockstar {
+  color: #db4cdb;
+  margin-left: 123px;
+  margin-top: 50px;
+  position: absolute;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+}
+
+.masterpiece {
+  color: white;
+  font-family: "Oswald", sans-serif;
+  margin-left: 69px;
+  margin-top: 19px;
+  position: absolute;
+}
+
+.preciomasterpiece {
+  color: #db4cdb;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  margin-left: 130px;
+  margin-top: 49px;
+  position: absolute;
+}
+
+.pantalon1 {
+  position: absolute;
+  width: 300px;
+  height: 290px;
+  margin-top: 90px;
+  margin-left: 990px;
+  border-radius: 5px;
+}
+
+.active1 {
+  color: white;
+  font-family: "Oswald", sans-serif;
+  margin-left: 420px;
+  margin-top: 463px;
+  position: absolute;
+}
+
+.precioactive {
+  color: #db4cdb;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  margin-left: 420px;
+  margin-top: 519px;
+  position: absolute;
+}
+
+.zapatillas1 {
+  position: absolute;
+  width: 300px;
+  height: 290px;
+  margin-top: 90px;
+  margin-left: 0px;
+  border-radius: 5px;
+}
+
+.denver {
+  color: white;
+  font-family: "Oswald", sans-serif;
+  margin-left: 120px;
+  margin-top: 12px;
+  position: absolute;
+}
+
+.preciodenver {
+  color: #db4cdb;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  margin-left: 150px;
+  margin-top: 36px;
+  position: absolute;
+}
+
+.card:hover {
+  opacity: 1;
+  border: 2px gray solid;
+}
+
+.buzo2 {
+  position: absolute;
+  width: 300px;
+  margin-left: -1738px;
+  margin-top: 310px;
+  border-radius: 5px;
+}
+
+.kieeh {
+  color: white;
+  font-family: "Oswald", sans-serif;
+  margin-left: -1630px;
+  margin-top: 672px;
+  position: absolute;
+}
+
+.preciokieeh {
+  color: #db4cdb;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  margin-left: -1589px;
+  margin-top: 700px;
+  position: absolute;
+}
+
+.remera2 {
+  position: absolute;
+  width: 300px;
+  margin-left: -1310px;
+  margin-top: 300px;
+  border-radius: 5px;
+  height: 310px;
+}
+
+.freres {
+  color: white;
+  font-family: "Oswald", sans-serif;
+  margin-left: -1200px;
+  margin-top: 670px;
+  position: absolute;
+}
+
+.preciofreres {
+  color: #db4cdb;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  margin-left: -1173px;
+  margin-top: 695px;
+  position: absolute;
+}
+
+.pantalon2 {
+  position: absolute;
+  width: 300px;
+  margin-left: -825px;
+  margin-top: 295px;
+  border-radius: 5px;
+  height: 310px;
+}
+
+.vintage {
+  color: white;
+  font-family: "Oswald", sans-serif;
+  margin-left: -720px;
+  margin-top: 670px;
+  position: absolute;
+}
+
+.preciovintage {
+  color: #db4cdb;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  margin-left: -685px;
+  margin-top: 697px;
+  position: absolute;
+}
+
+.zapatillas2 {
+  position: absolute;
+  width: 300px;
+  margin-left: -420px;
+  margin-top: 295px;
+  border-radius: 5px;
+  height: 310px;
+}
+
+.peggy {
+  color: white;
+  font-family: "Oswald", sans-serif;
+  margin-left: -300px;
+  margin-top: 670px;
+  position: absolute;
+}
+
+.preciopeggy {
+  color: #db4cdb;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  margin-left: -280px;
+  margin-top: 697px;
+  position: absolute;
+}
+
+.footerproducto {
+  margin-top: 500px;
+}
+
 /*# sourceMappingURL=style.css.map */
