--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -3,6 +3,7 @@ $blanco: white;
 $principal: #a558ec;
 $fuente: "Montserrat", sans-serif;
 $footer: #706a6a;
+$rosa: #db4cdb;
 * {
     margin: 0;
     padding: 0;
