--- a/css/style_old.css
+++ b/css/style_old.css
@@ -328,7 +328,7 @@ footer{
 }
 
 .preciorockstar{
-  color: rgb(248, 61, 248);
+  color: #f83df8;
   margin-left: 123px;
   margin-top: 50px;
   position: absolute;
@@ -342,7 +342,7 @@ footer{
   position: absolute;
 }
 .preciomasterpiece{
-  color: rgb(248, 61, 248);
+  color: #f83df8;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   margin-left:130px;
   margin-top: 49px;
@@ -364,7 +364,7 @@ footer{
   position: absolute;
 }
 .precioactive{
-  color: rgb(248, 61, 248);
+  color: #f83df8;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   margin-left: 420px;
   margin-top: 519px;
@@ -386,7 +386,7 @@ footer{
   position: absolute;
 }
 .preciodenver{
-  color: rgb(248, 61, 248);
+  color: #f83df8;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   margin-left: 150px;
   margin-top: 36px;
@@ -412,7 +412,7 @@ footer{
   position: absolute;
 }
 .preciokieeh{
-  color: rgb(248, 61, 248);
+  color: #f83df8;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   margin-left: -1589px;
   margin-top:700px;
@@ -434,7 +434,7 @@ footer{
   position: absolute;
 }
 .preciofreres{
-  color: rgb(248, 61, 248);
+  color: #f83df8;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   margin-left:-1173px;
   margin-top: 695px;
@@ -456,7 +456,7 @@ footer{
   position: absolute;
 }
 .preciovintage{
-  color: rgb(248, 61, 248);
+  color: rgb(247, 64, 247);
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   margin-left: -685px;
   margin-top: 697px;
