--- a/css/style_old.css
+++ b/css/style_old.css
@@ -252,7 +252,7 @@ footer{
 .barra-contraste button:hover {
   background-color: #ccc;
 }
-/* aca sigue la pagina NOSOTROS*/
+/* aca sigue la pagina CONTACTO*/
 .instagram2{
   margin-top: -450px;
   margin-left: 280px;
