--- a/scss/style.scss
+++ b/scss/style.scss
@@ -5,3 +5,7 @@
 @import "footer";
 @import "bodyproductos";
 @import "mainproductos";
+@import "mainnosotros";
+@import "barranosotros";
+@import "maincontacto";
+@import "mainpedido";
