--- a/scss/_mainproductos.scss
+++ b/scss/_mainproductos.scss
@@ -22,13 +22,13 @@
     height: 300px;
     box-shadow: 0 4px 8px;
     text-align: center;
-    background-color: #db4cdb;
-    border: 1px solid #db4cdb;
+    background-color: $rosa;
+    border: 1px solid $rosa;
 
 }
 
 .rockstar {
-    color: white;
+    color: $blanco;
     font-family: "Oswald", sans-serif;
     margin-left: 80px;
     margin-top: 20px;
@@ -36,7 +36,7 @@
 }
 
 .preciorockstar {
-    color: #f83df8;
+    color: $rosa;
     margin-left: 123px;
     margin-top: 50px;
     position: absolute;
@@ -44,7 +44,7 @@
 }
 
 .masterpiece {
-    color: white;
+    color: $blanco;
     font-family: "Oswald", sans-serif;
     margin-left: 60px;
     margin-top: 19px;
@@ -52,7 +52,7 @@
 }
 
 .preciomasterpiece {
-    color: #f83df8;
+    color: $rosa;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin-left: 130px;
     margin-top: 49px;
@@ -60,7 +60,7 @@
 }
 
 .active1 {
-    color: white;
+    color: $blanco;
     font-family: "Oswald", sans-serif;
     margin-left: 340px;
     margin-top: 423px;
@@ -68,7 +68,7 @@
 }
 
 .precioactive {
-    color: #f83df8;
+    color: $rosa;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin-left: 340px;
     margin-top: 479px;
@@ -81,7 +81,7 @@
 }
 
 .denver {
-    color: white;
+    color: $blanco;
     font-family: "Oswald", sans-serif;
     margin-left: 150px;
     margin-top: 12px;
@@ -89,7 +89,7 @@
 }
 
 .preciodenver {
-    color: #f83df8;
+    color: $rosa;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin-left: 180px;
     margin-top: 36px;
@@ -129,7 +129,7 @@
 }
 
 .freres {
-    color: white;
+    color: $blanco;
     font-family: "Oswald", sans-serif;
     margin-left: -1210px;
     margin-top: 635px;
@@ -137,7 +137,7 @@
 }
 
 .preciofreres {
-    color: #f83df8;
+    color: $rosa;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin-left: -1183px;
     margin-top: 665px;
@@ -154,7 +154,7 @@
 }
 
 .vintage {
-    color: white;
+    color: $blanco;
     font-family: "Oswald", sans-serif;
     margin-left: -740px;
     margin-top: 630px;
@@ -162,7 +162,7 @@
 }
 
 .preciovintage {
-    color: rgb(247, 64, 247);
+    color: $rosa;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin-left: -710px;
     margin-top: 657px;
@@ -179,7 +179,7 @@
 }
 
 .peggy {
-    color: white;
+    color: $blanco;
     font-family: "Oswald", sans-serif;
     margin-left: -295px;
     margin-top: 620px;
@@ -187,7 +187,7 @@
 }
 
 .preciopeggy {
-    color: rgb(248, 61, 248);
+    color:$rosa;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin-left: -260px;
     margin-top: 647px;
@@ -195,7 +195,7 @@
 }
 
 .kieeh {
-    color: white;
+    color:$blanco;
     font-family: "Oswald", sans-serif;
     margin-left: -1610px;
     margin-top: 637px;
@@ -203,7 +203,7 @@
 }
 
 .preciokieeh {
-    color: #f83df8;
+    color: $rosa;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     margin-left: -1573px;
     margin-top: 665px;
