--- a/scss/_mainproductos.scss
+++ b/scss/_mainproductos.scss
@@ -33,6 +33,10 @@
     margin-left: 80px;
     margin-top: 20px;
     position: absolute;
+} 
+.grad1:hover{
+    transform: scale(1.1,1.1);
+    transition: all 1s;
 }
 
 .preciorockstar {
