--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,23 @@ header nav .seccion:hover {
   text-decoration: underline;
   font-family: "Montserrat", sans-serif;
 }
+.sectionindex .cambio {
+  color: #a558ec;
+  animation-name: aparece;
+  animation-duration: 2.5s;
+  animation-iteration-count: infinite;
+}
+@keyframes aparece {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
 .sectionindex .fotoconjunto {
   border-radius: 15px;
   margin-left: 150px;
@@ -156,6 +173,11 @@ footer {
   margin-left: 80px;
   margin-top: 20px;
   position: absolute;
+}
+
+.grad1:hover {
+  transform: scale(1.1, 1.1);
+  transition: all 1s;
 }
 
 .preciorockstar {
@@ -485,6 +507,25 @@ footer {
 
 .footerpedido {
   margin-top: 100px;
+}
+
+.barra-contraste {
+  background-color: #333;
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+}
+
+.barra-contraste h2 {
+  margin: 0 0 20px;
+  font-size: 24px;
+  color: #fff;
+}
+
+.barra-contraste iframe {
+  width: 100%;
+  max-width: 600px;
+  height: 450px;
 }
 
 @media screen and (max-width: 768px) {
