--- a/scss/_sectionindex.scss
+++ b/scss/_sectionindex.scss
@@ -8,6 +8,23 @@
         text-decoration: underline;
         font-family: $fuente;
     }
+    .cambio{
+        color: $principal;
+        animation-name: aparece;
+        animation-duration: 2.5s;
+        animation-iteration-count: infinite;
+    }
+    @keyframes aparece{
+        0%{
+            opacity: 0;
+        }
+        50%{
+            opacity: 1;
+        }
+        100%{
+            opacity: 0;
+        }
+    }
 
     .fotoconjunto {
         border-radius: 15px;
@@ -15,7 +32,9 @@
         &:hover{
             border: solid $principal 2px;
         }
+        
     }
+
 
     .dark {
         color: $blanco;
