--- a/css/style.css
+++ b/css/style.css
@@ -659,29 +659,26 @@ header nav .seccion:hover {
   .seguipedido {
     margin-left: 340px;
     margin-top: 40px;
-    font-size: 20px;
+    font-size: 15px;
     align-items: center;
   }
 
   .textopedido {
     margin-left: 50px;
     margin-right: 50px;
-    font-size: 20px;
+    font-size: 15px;
     text-align: center;
+    padding: 1px;
   }
 
   .fotopedido {
-    width: 50%;
-    margin-left: 220px;
+    width: 40%;
+    margin-left: 240px;
     margin-top: 20px;
     position: relative;
     padding: 20px;
     align-items: center;
   
   }
-
-
-
-
 
 }
