--- a/css/style.css
+++ b/css/style.css
@@ -562,7 +562,7 @@ header nav .seccion:hover {
     color: #a558ec;
     margin-top: 10px;
   }
-  
+
 
   .dark {
     margin-left: 50px;
@@ -678,7 +678,226 @@ header nav .seccion:hover {
     position: relative;
     padding: 20px;
     align-items: center;
-  
+
   }
 
+}
+
+@media (max-width: 768px) {
+
+  html,
+  body {
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    overflow-x: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: black;
+  }
+
+  header {
+    width: 100%;
+    padding: 15px;
+    text-align: center;
+  }
+
+  header .logo {
+    width: 120px;
+    margin: 0 auto;
+    position: static;
+  }
+
+  header .carrito {
+    width: 40px;
+    position: absolute;
+    top: 10px;
+    right: 20px;
+  }
+
+  header nav {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-top: 15px;
+  }
+
+  header nav li {
+    margin: 10px;
+    font-size: 16px;
+    font-family: "Montserrat", sans-serif;
+    font-weight: bold;
+    color: white;
+    text-align: center;
+  }
+
+  header nav .seccion {
+    text-decoration: none;
+    color: white;
+  }
+
+  header nav .seccion:hover {
+    color: #a558ec;
+  }
+
+  .mainindex {
+    width: 95%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 15px;
+  }
+
+  .portada {
+    width: 100%;
+    margin-top: 15px;
+  }
+
+  .columnas {
+    color: white;
+    font-size: 16px;
+    text-align: center;
+    margin: 15px 0;
+    font-family: "Montserrat", sans-serif;
+  }
+
+  .parrafoinicio {
+    color: #a558ec;
+    font-size: 14px;
+  }
+
+  .sectionindex {
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-top: 40px;
+    align-items: center;
+    text-align: center;
+  }
+
+  .sectionindex .conjunto {
+    width: 100%;
+    color: white;
+    font-weight: bold;
+    font-family: "Montserrat", sans-serif;
+    text-decoration: underline;
+    font-size: 24px;
+  }
+
+  .sectionindex .fotoconjunto,
+  .sectionindex .fotoconjunto2 {
+    width: 48%;
+    margin: 20px 1%;
+    border-radius: 15px;
+  }
+
+  .sectionindex .fotoconjunto:hover,
+  .sectionindex .fotoconjunto2:hover {
+    border: 2px solid #a558ec;
+  }
+
+  .sectionindex .precioconjunto,
+  .sectionindex .precioconjunto2 {
+    font-size: 20px;
+    color: #a558ec;
+    margin-top: 10px;
+  }
+
+
+
+  .dark,
+  .light {
+    margin: 10px auto;
+  }
+  .dark{
+    margin-top: 30px;
+  }
+  .light{
+    margin-left: -100px;
+     margin-top: 30px;
+  }
+
+  footer {
+    width: 100%;
+    text-align: center;
+    padding: 15px 0;
+    background-color: #111;
+  }
+
+  footer .textofooter {
+    font-size: 14px;
+    color: #706a6a;
+  }
+
+  footer .tarjetas {
+    width: 150px;
+    margin-top: 10px;
+  }
+
+  .titulonosotros {
+    font-size: 30px;
+    margin-top: 15px;
+  }
+
+  .videokibua {
+    width: 80%;
+    margin: 20px auto;
+    display: block;
+  }
+
+  .parrafonosotros {
+    font-size: 16px;
+    margin: 10px;
+    padding: 20px;
+    text-align: justify;
+  }
+
+  .barra-contraste input[type=email] {
+    width: 200px;
+  }
+
+  .barra-contraste button {
+    font-size: 12px;
+  }
+
+  .formulario {
+    width: 120%;
+    margin: 20px auto;
+    padding: 10px;
+  }
+
+  .comunicate {
+    font-size: 1.2em;
+    margin-top: 15px;
+    text-align: center;
+  }
+
+  .instagram2,
+  .facebook2 {
+    margin: 10px auto;
+    width: 30%;
+  }
+
+  iframe {
+    width: 100%;
+    height: 200px;
+  }
+
+  .seguipedido,
+  .textopedido {
+    margin: 10px auto;
+    font-size: 14px;
+    text-align: center;
+    padding: 5px;
+  }
+
+
+  .fotopedido {
+    width: 50%;
+    padding: 10px;
+    margin-left:160px;
+  }
 }
