--- a/css/style.css
+++ b/css/style.css
@@ -434,483 +434,7 @@ header nav .seccion:hover {
   height: 450px;
 }
 
-@media (max-width: 1024px) {
-
-  html,
-  body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    overflow-x: hidden;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: black;
-  }
-
-  header {
-    width: 100%;
-    padding: 20px;
-    text-align: center;
-  }
-
-  header .logo {
-    width: 150px;
-    margin: 0 auto;
-    margin-left: -50px;
-    position: sticky;
-  }
-
-  header .carrito {
-    width: 60px;
-    position: fixed;
-    margin-top: 10px;
-    margin-left: 800px;
-    margin-right: 20px;
-  }
-
-  header nav {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    margin-top: 20px;
-  }
-
-  header nav li {
-    margin: 0 15px;
-    font-size: 18px;
-    font-family: "Montserrat", sans-serif;
-    font-weight: bold;
-    color: white;
-    text-align: center;
-    margin-top: 100px;
-  }
-
-  header nav .seccion {
-    text-decoration: none;
-    color: white;
-  }
-
-  header nav .seccion:hover {
-    color: #a558ec;
-  }
-
-
-  .mainindex {
-    width: 90%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 20px;
-  }
-
-  .portada {
-    width: 100%;
-    margin-top: 20px;
-  }
-
-
-  .columnas {
-    color: white;
-    font-size: 18px;
-    text-align: center;
-    margin: 20px 0;
-    font-family: "Montserrat", sans-serif;
-  }
-
-  .parrafoinicio {
-    color: #a558ec;
-    font-size: 16px;
-  }
-
-
-  .sectionindex {
-    width: 90%;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    margin-top: 40px;
-    align-items: center;
-    text-align: center;
-  }
-
-  .sectionindex .conjunto {
-    width: 100%;
-    color: white;
-    font-weight: bold;
-    font-family: "Montserrat", sans-serif;
-    text-decoration: underline;
-    font-size: 24px;
-  }
-
-  .sectionindex .fotoconjunto,
-  .sectionindex .fotoconjunto2 {
-    width: 48%;
-    margin: 20px 1%;
-    border-radius: 15px;
-  }
-
-  .sectionindex .fotoconjunto:hover,
-  .sectionindex .fotoconjunto2:hover {
-    border: 2px solid #a558ec;
-  }
-
-  .sectionindex .precioconjunto,
-  .sectionindex .precioconjunto2 {
-    font-size: 20px;
-    color: #a558ec;
-    margin-top: 10px;
-  }
-
-
-  .dark {
-    margin-left: 50px;
-    margin-top: 190px;
-  }
-
-  .light {
-    margin-left: -110px;
-    margin-top: 190px;
-  }
-
-  footer {
-    width: 100%;
-    text-align: center;
-    padding: 20px 0;
-    background-color: #111;
-  }
-
-  footer .textofooter {
-    font-size: 16px;
-    color: #706a6a;
-  }
-
-  footer .tarjetas {
-    width: 200px;
-    margin-top: 10px;
-  }
-
-  .titulonosotros {
-    font-size: 40px;
-    margin-top: 20px;
-
-  }
-
-  .videokibua {
-    width: 60%;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 30px;
-    display: block;
-  }
-
-  .parrafonosotros {
-    font-size: 18px;
-    margin-left: 50px;
-    margin-right: 50px;
-    margin-top: 20px;
-    padding: 30px;
-    text-align: justify;
-  }
-
-  .barra-contraste input[type=email] {
-    width: 250px;
-  }
-
-  .barra-contraste button {
-    font-size: 14px;
-  }
-
-  .logo {
-    width: 130px;
-  }
-
-  .carrito {
-    width: 35px;
-  }
-
-  .formulario {
-    width: 90%;
-    margin: 20px auto;
-    margin-top: 50px;
-    padding: 15px;
-  }
-
-  .comunicate {
-    font-size: 1.5em;
-    margin-top: 20px;
-    text-align: center;
-  }
-
-  .instagram2,
-  .facebook2 {
-    position: static;
-    margin: 20px auto;
-    width: 90%;
-    height: auto;
-  }
-
-  iframe {
-    width: 100%;
-    height: 300px;
-  }
-
-  .seguipedido {
-    margin-left: 340px;
-    margin-top: 40px;
-    font-size: 15px;
-    align-items: center;
-  }
-
-  .textopedido {
-    margin-left: 50px;
-    margin-right: 50px;
-    font-size: 15px;
-    text-align: center;
-    padding: 1px;
-  }
-
-  .fotopedido {
-    width: 40%;
-    margin-left: 240px;
-    margin-top: 20px;
-    position: relative;
-    padding: 20px;
-    align-items: center;
-
-  }
-
-  .precios {
-    position: absolute;
-    top: 224%;
-    left: -8%;
-  }
-
-}
-
-@media (max-width: 768px) {
-
-  html,
-  body {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    overflow-x: hidden;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: black;
-  }
-
-  header {
-    width: 100%;
-    padding: 15px;
-    text-align: center;
-  }
-
-  header .logo {
-    width: 120px;
-    margin: 0 auto;
-    position: static;
-  }
-
-  header .carrito {
-    width: 40px;
-    position: absolute;
-    top: 10px;
-    right: 20px;
-  }
-
-  header nav {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    margin-top: 15px;
-  }
-
-  header nav li {
-    margin: 10px;
-    font-size: 16px;
-    font-family: "Montserrat", sans-serif;
-    font-weight: bold;
-    color: white;
-    text-align: center;
-  }
-
-  header nav .seccion {
-    text-decoration: none;
-    color: white;
-  }
-
-  header nav .seccion:hover {
-    color: #a558ec;
-  }
-
-  .mainindex {
-    width: 95%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 15px;
-  }
-
-  .portada {
-    width: 100%;
-    margin-top: 15px;
-  }
-
-  .columnas {
-    color: white;
-    font-size: 16px;
-    text-align: center;
-    margin: 15px 0;
-    font-family: "Montserrat", sans-serif;
-  }
-
-  .parrafoinicio {
-    color: #a558ec;
-    font-size: 14px;
-  }
-
-  .sectionindex {
-    width: 90%;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    margin-top: 40px;
-    align-items: center;
-    text-align: center;
-  }
-
-  .sectionindex .conjunto {
-    width: 100%;
-    color: white;
-    font-weight: bold;
-    font-family: "Montserrat", sans-serif;
-    text-decoration: underline;
-    font-size: 24px;
-  }
-
-  .sectionindex .fotoconjunto,
-  .sectionindex .fotoconjunto2 {
-    width: 48%;
-    margin: 20px 1%;
-    border-radius: 15px;
-  }
-
-  .sectionindex .fotoconjunto:hover,
-  .sectionindex .fotoconjunto2:hover {
-    border: 2px solid #a558ec;
-  }
-
-  .sectionindex .precioconjunto,
-  .sectionindex .precioconjunto2 {
-    font-size: 20px;
-    color: #a558ec;
-    margin-top: 10px;
-  }
-
-  .dark,
-  .light {
-    margin: 10px auto;
-  }
-
-  .dark {
-    margin-top: 150px;
-  }
-
-  .light {
-    margin-left: -100px;
-    margin-top: 150px;
-  }
-
-  .precios {
-    position: absolute;
-    top: 201%;
-    left: -27%;
-  }
-
-  footer {
-    width: 100%;
-    text-align: center;
-    padding: 15px 0;
-    background-color: #111;
-  }
-
-  footer .textofooter {
-    font-size: 14px;
-    color: #706a6a;
-  }
-
-  footer .tarjetas {
-    width: 150px;
-    margin-top: 10px;
-  }
-
-  .titulonosotros {
-    font-size: 30px;
-    margin-top: 15px;
-  }
-
-  .videokibua {
-    width: 80%;
-    margin: 20px auto;
-    display: block;
-  }
-
-  .parrafonosotros {
-    font-size: 16px;
-    margin: 10px;
-    padding: 20px;
-    text-align: justify;
-  }
-
-  .barra-contraste input[type=email] {
-    width: 200px;
-  }
-
-  .barra-contraste button {
-    font-size: 12px;
-  }
-
-  .formulario {
-    width: 120%;
-    margin: 20px auto;
-    padding: 10px;
-  }
-
-  .comunicate {
-    font-size: 1.2em;
-    margin-top: 15px;
-    text-align: center;
-  }
-
-  .instagram2,
-  .facebook2 {
-    margin: 10px auto;
-    width: 30%;
-  }
-
-  iframe {
-    width: 100%;
-    height: 200px;
-  }
-
-  .seguipedido,
-  .textopedido {
-    margin: 10px auto;
-    font-size: 14px;
-    text-align: center;
-    padding: 5px;
-  }
-
-
-  .fotopedido {
-    width: 50%;
-    padding: 10px;
-    margin-left: 160px;
-  }
+@media screen and (max-width:1024px) {
+  
 
 }
